# event-driven-architecture

./: .envrc.example  .gitignore  Cargo.toml  Makefile.toml  README.md  docker-compose.yml
infra/: .gitignore
infra/aws/: dev.s3 tfbackend.example  groups.tf  main.tf  terraform.tfvars.json.example  users.tf  variables.tf
infra/aws/bootstrap/: event-driven-apigateway-access.json  event-driven-lambda-access.json  event-driven-root-access.json  main.tf  variables.tf
infra/local/: dynamodb.tf  kinesis.tf  lambda.tf  main.tf  s3.tf  sqs.tf  variables.tf
infra/modules/app/: apigateway.tf  dynamodb.tf  kinesis.tf  lambda.tf  s3.tf  sqs.tf  variables.tf
infra/modules/user/: main.tf  outputs.tf  variables.tf
src/: http.rs  lib.rs  main.rs
src/domains/: errors.rs  event.rs  mod.rs
src/domains/tasks/: aggregate.rs  commands.rs  cqrs.rs  events.rs  inputs.rs  mod.rs  view.rs
src/projectors/: mod.rs  s3_audit.rs
src/publishers/: kinesis.rs  mod.rs
src/utils/: lambda.rs  mod.rs  update.rs
